# first-agentic-system

./: .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  fly.toml  pyproject.toml  requirements.txt
app/api/: main.py
app/config/: env_config.py
app/models/: agent_models.py  strava_agent.py
app/tests/: test_excel_tool.py  test_strava_tool.py  test_workout_search_tool.py
app/tools/: excel_tool.py  strava_tool.py  workout_search_tool.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx
frontend/src/components/: PlanStatusChecker.tsx  TrainingPlanForm.tsx
